--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@types/bootstrap": "^5.2.6",
     "@types/node": "^18.15.11",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
@@ -31,6 +32,7 @@
     "@formkit/nuxt": "latest",
     "@formkit/pro": "latest",
     "@pinia/nuxt": "^0.4.7",
+    "bootstrap": "^5.3.0",
     "npm": "^9.6.2",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0"
