set storage package and fix default value

--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,7 @@
 BASE_API=https://api-cnt-aglove.724insure.net
 COMPANY_IMAGE=https://724.co.th/image/logo_insurance_company/
+
+FIX_DEFAULT_PACKAGE_TAXINCLUDE=1
+FIX_VALUE_PACKAGE_TAXINCLUDE=1
+FIX_DEFAULT_PACKAGE_PAPERBALANCE=1
+FIX_VALUE_PACKAGE_PAPERBALANCE=999
