--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@formkit/pro": "latest",
     "@pinia/nuxt": "^0.4.7",
     "bootstrap": "^5.3.0",
+    "dayjs": "^1.11.8",
     "npm": "^9.6.2",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0"
