--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "private": true,
+  "version": "0.2.0",
+  "author": "724 Market",
   "scripts": {
     "build": "nuxt build --dotenv .env.prd",
     "build:uat": "nuxt generate --dotenv .env.uat",
