--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@nuxt/devtools": "^0.1.6",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^18.15.11",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
@@ -38,6 +39,7 @@
     "datatables.net-bs5": "^1.13.6",
     "datatables.net-vue3": "^2.1.2",
     "dayjs": "^1.11.8",
+    "js-cookie": "^3.0.5",
     "npm": "^9.6.2",
     "pinia": "^2.1.7"
   },
