--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "datatables.net-vue3": "^2.1.2",
     "dayjs": "^1.11.8",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "npm": "^9.6.2",
     "pinia": "^2.1.7"
   },
